--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
-          java-version: '12.x'
-      - uses: subosite/flutter-action@v1
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '3.16.4'
+          flutter-version: "3.16.4"
       - run: flutter pub get
       - run: flutter test
       - run: flutter build apk --debug --split-per-abi
@@ -40,8 +40,3 @@ jobs:
           artifacts: "build/apk/outputs/apk/debug/*"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
-
-
-
-
-
